oop_mro/tests/trybuild/fail_as_base_wrong_generic_target.stderr
error[E0277]: the trait bound `MemoryRepository<String>: OopBase<Repository<u8>>` is not satisfied
  --> tests/trybuild/fail_as_base_wrong_generic_target.rs:24:24
   |
24 |     let _ = repository.as_base::<Repository<u8>>();
   |                        ^^^^^^^ unsatisfied trait bound
   |
help: the trait `OopBase<Repository<u8>>` is not implemented for `MemoryRepository<String>`
  --> tests/trybuild/fail_as_base_wrong_generic_target.rs:3:1
   |
 3 | / oop_class! {
 4 | |     abstract class Repository<T> {
 5 | |         abstract virtual fn current(&self) -> &T;
...  |
 8 | |     class MemoryRepository<Item>: Repository<Item> where Item: Default {
   | |__________________________^
help: the following other types implement trait `OopBase<Target>`
  --> tests/trybuild/fail_as_base_wrong_generic_target.rs:3:1
   |
 3 | / oop_class! {
 4 | |     abstract class Repository<T> {
 5 | |         abstract virtual fn current(&self) -> &T;
...  |
 8 | |     class MemoryRepository<Item>: Repository<Item> where Item: Default {
   | |                                                                      ^
   | |                                                                      |
   | |______________________________________________________________________`MemoryRepository<Item>` implements `OopBase<MemoryRepository<Item>>`
   |                                                                        `MemoryRepository<Item>` implements `OopBase<Repository<Item>>`
note: required by a bound in `as_base`
  --> src/lib.rs
   |
   |     fn as_base<Target>(&self) -> &Target
   |        ------- required by a bound in this associated function
   |     where
   |         Self: OopBase<Target>,
   |               ^^^^^^^^^^^^^^^ required by this bound in `OopBaseAccess::as_base`
   = note: this error originates in the macro `oop_class` (in Nightly builds, run with -Z macro-backtrace for more info)
